[tool.poetry]
name = "jaskier"
version = "0.1.0"
description = ""
authors = ["Bartek Sokorski <b.sokorski@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7, <3.12"
jinja2 = "^3.1.2"


[tool.poetry.group.dev.dependencies]
poethepoet = "^0.16.2"
pre-commit = "^2.20.0"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
